Changed: Configured workflow

--- a/my-K8s-Deploy-App/templates/deployment.yaml
+++ b/my-K8s-Deploy-App/templates/deployment.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        container: k8s-deploy
+        app: k8s-deploy
     spec:
       containers:
         - name: k8s-deploy
